--- a/tourist-web/src/main/webapp/view/platform/supplierList.html
+++ b/tourist-web/src/main/webapp/view/platform/supplierList.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
-
     <script src="../../assets/seajs/sea.js"></script>
     <script src="../../assets/seajs/config.js"></script>
-    <script>seajs.use(["jquery", "bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>
+    <script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>
 </head>
 <body>
 <div class="panel-body" style="padding-bottom:0;">
