--- a/tourist-web/src/main/webapp/view/login.html
+++ b/tourist-web/src/main/webapp/view/login.html
@@ -1,105 +1,67 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10"/>
 
-    <title>微网商务通</title>
-    <link href="../assets/css/admin.global.css" type="text/css" rel="stylesheet"/>
-    <link href="../assets/css/admin.login.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <script src="../assets/seajs/sea.js"></script>
-    <script src="../assets/seajs/config.js"></script>
-    <!--[if lte IE 6]>
-    <script src="DD_belatedPNG_0.0.8a.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        DD_belatedPNG.fix('div, ul, img, li, input , a');
-    </script>
+    <title>后台供应商 - 登录</title>
+    <meta name="keywords" content="供应商">
+    <meta name="description" content="供应商登录页面">
+
+    <!--<link rel="shortcut icon" href="favicon.ico"> 图标-->
+    <link href="http://resali.huobanplus.com/cdn/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
+
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/animate.min.css" rel="stylesheet"/>
+    <link href="../assets/css/style.min.css?v=4.0.0" rel="stylesheet">
+    <base target="_blank">
+    <!--[if lt IE 8]>
+    <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
-
+    <script>if(window.top !== window.self){ window.top.location = window.location;}</script>
 </head>
 
-<body class="login_back">
-<div style="height: 220px;"></div>
-<div id="loginLogo" class="log_box">
-    <div class="log_left">
-        <img class="log" width="119px" height="auto" src="../assets/img/login_logo.png" alt=""
-             style="vertical-align: middle; height: auto;"/>
-        <span style="width: 140px; padding-left: 20px;">
-                <!--<img src="images/log_tit.png" alt="" />-->
-                <b id="netName" style="font-family: 'Microsoft YaHei'; font-size: 18px; color: #000;">微网商务通</b>
-                <b class="tt" style="margin: 4px 0px;">微管理后台Beta2.0</b>
-                <p style="padding: 0px; margin: 4px 0px;">
-                    Copyright 2013-2015<br/>
+<body class="gray-bg">
 
-                </p>
-                <p style="padding: 0px; margin: 4px 0px;">
-                    建议使用谷歌浏览器
-                </p>
-            </span>
-    </div>
-    <div style="float: left;">
-        <img src="../assets/img/ge.gif" alt=""/>
-    </div>
-    <div class="log_right">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="line-height: 30px;">
-            <tr>
-                <td width="18%">服务器：</td>
-                <td width="82%">
-                    <input type="radio" name="logingType" id="logingType0" value="0" checked="checked"/>
-                    <label for="logingType0">管理员</label>
+<div class="middle-box text-center loginscreen  animated fadeInDown">
+    <div>
+        <div>
 
-                    <input type="radio" name="logingType" id="logingType1" value="1"/>
-                    <label for="logingType1">微网站商户</label>
-                </td>
-            </tr>
-            <tr id="customernametr" style="display: none;">
-                <td>商户名：</td>
-                <td>
-                    <input type="text" name="customerName" id="customerName" class="in"/></td>
-            </tr>
-            <tr>
-                <td>用&nbsp;&nbsp;&nbsp;户：</td>
-                <td>
-                    <input type="text" name="username" id="username" class="in"/></td>
-            </tr>
-            <tr>
-                <td>密&nbsp;&nbsp;&nbsp;码：</td>
-                <td>
-                    <input type="password" name="password" id="password" class="in"/><img src="../assets/img/lock.gif"
-                                                                                          width="19" height="18"
-                                                                                          alt="密码" class="middle"/></td>
-            </tr>
-            <tr>
-                <td>验证码：</td>
-                <td style="vertical-align: top;">
-                    <input type="text" name="verifycode" id="verifycode" class="in" style="width: 40px;" maxlength="4"/>
-                    <img id="verify_image" style="vertical-align: middle; width: 80px; height: 40px; display: inline"
-                         alt="点击刷新" src=""/>
-                    <a id="refresh_verify_image" class="line" href="javascript:void(0);"
-                       style="vertical-align: middle; color: #2e3740;">换一张</a>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td colspan="2" style="padding-left: 50px;">
-                    <input type="checkbox" id="remember" name="remember"/>
-                    <label>记住密码</label>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <a href="platform/main.html" id="login_btn" class="btn"><span>登录</span></a>
-                </td>
-            </tr>
-        </table>
+            <h1 class="logo-name">XL</h1>
+
+        </div>
+        <h3>供应商登录</h3>
+
+        <form class="m-t" role="form" action="index.html">
+            <div class="form-group">
+                <input value="admin" type="text" class="form-control" placeholder="用户名" required=""/>
+            </div>
+            <div class="form-group">
+                <input value="123456" type="password" class="form-control" placeholder="密码" required=""/>
+            </div>
+            <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
+
+
+            <!--<p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>-->
+            <!--</p>-->
+
+        </form>
     </div>
 </div>
+<script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
 </body>
+
 </html>
