--- a/tourist-web/src/main/webapp/view/login.html
+++ b/tourist-web/src/main/webapp/view/login.html
@@ -26,11 +26,11 @@
 
     <link href="http://resali.huobanplus.com/cdn/hotui/css/animate.min.css" rel="stylesheet"/>
     <link href="../assets/css/style.min.css?v=4.0.0" rel="stylesheet">
-    <base target="_blank">
-    <!--[if lt IE 8]>
-    <meta http-equiv="refresh" content="0;ie.html" />
-    <![endif]-->
-    <script>if(window.top !== window.self){ window.top.location = window.location;}</script>
+
+    <script>
+        if(window.top !== window.self){
+            window.top.location = window.location;}
+    </script>
 </head>
 
 <body class="gray-bg">
@@ -44,7 +44,7 @@
         </div>
         <h3>供应商登录</h3>
 
-        <form class="m-t" role="form" action="index.html">
+        <form class="m-t" role="form" action="platform/main.html">
             <div class="form-group">
                 <input value="admin" type="text" class="form-control" placeholder="用户名" required=""/>
             </div>
