--- a/tourist-web/src/main/webapp/view/login.html
+++ b/tourist-web/src/main/webapp/view/login.html
@@ -8,7 +8,7 @@
   ~ 2013-2016. All rights reserved.
   -->
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 
 <head>
 
@@ -44,7 +44,7 @@
         </div>
         <h3>供应商登录</h3>
 
-        <form class="m-t" role="form" action="index.html">
+        <form class="m-t" role="form" action="platform/main.html">
             <div class="form-group">
                 <input value="admin" type="text" class="form-control" placeholder="用户名" required=""/>
             </div>
@@ -52,7 +52,6 @@
                 <input value="123456" type="password" class="form-control" placeholder="密码" required=""/>
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
-
 
             <!--<p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a>-->
             <!--</p>-->
