--- a/tourist-web/src/main/webapp/view/platform/supplierList.html
+++ b/tourist-web/src/main/webapp/view/platform/supplierList.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>供应商列表</title>
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
@@ -32,7 +32,7 @@
 
     <div id="toolbar" class="btn-group">
         <button id="btn_add" type="button" class="btn btn-default">
-            <a href="addModel.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
+            <a href="addSupplier.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
         </button>
         <button id="btn_edit" type="button" class="btn btn-default">
             <a><span class="glyphicon glyphicon-pencil" aria-hidden="true">修改</span></a>
@@ -44,7 +44,7 @@
 
     <table id="table" data-toggle="table" data-url="../../mock/modelList.json" data-method="get"
            data-side-pagination="server"
-           data-pagination="true" data-striped="true" data-search="true" data-strict-search="true"
+           data-pagination="true" data-striped="true"
            data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
            data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
            data-query-params="getParams" data-toolbar="#toolbar">
