--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>火图CMS内容管理系统</title>
+    <title>行装路线管理系统</title>
     <meta charset="UTF-8" content="text/html">
     <link href="../../assets/css/main.css" type="text/css" rel="stylesheet"/>
     <script src="../../assets/seajs/sea.js"></script>
@@ -43,7 +43,7 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>供应商列表<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>供应商列表<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -51,7 +51,8 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="addSupplier.html" target="content"><i class="fa fa-caret-right"></i>新增供应商<span
+                            <a href="supplier/supplier.html" target="content"><i
+                                    class="fa fa-caret-right"></i>新增供应商<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -64,7 +65,8 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>采购商审核<span
+                            <a href="touristBuyer/touristBuyerList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>采购商审核<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -72,7 +74,7 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>采购商支付流水<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>采购商支付流水<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -80,7 +82,7 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路采购设置<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路采购设置<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -93,7 +95,7 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路产品审核<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路产品审核<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -101,7 +103,8 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>路线类型<span
+                            <a href="supplier/supplierList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>路线类型<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -109,7 +112,8 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>活动类型<span
+                            <a href="supplier/supplierList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>活动类型<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -122,7 +126,8 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>订单列表<span
+                            <a href="supplier/supplierList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>订单列表<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -135,7 +140,7 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>结算/提现审核<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>结算/提现审核<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -148,7 +153,8 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplierList.html" target="content"><i class="fa fa-caret-right"></i>首页banner<span
+                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>
+                                首页banner<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -194,12 +200,76 @@
     </div>
     <div class="con_right" id="con_right">
         <iframe id="content" name="content" width="1152" height="100%" class="hide" marginwidth="0" marginheight="0"
-                frameborder="0" scrolling="auto" src="supplierList.html"
+                frameborder="0" scrolling="auto" src="supplier/supplierList.html"
                 th:src="@{/distributionPlatform/toSupplierList}"
                 style="display: inline;">
         </iframe>
     </div>
 </div>
+
+<!--共享的文件上传模板-->
+<script type="text/template" id="qq-template">
+    <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="拖拽至此">
+        <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
+            <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                 class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
+        </div>
+        <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
+            <span class="qq-upload-drop-area-text-selector"></span>
+        </div>
+        <div class="qq-upload-button-selector qq-upload-button">
+            <div>选择文件</div>
+        </div>
+        <span class="qq-drop-processing-selector qq-drop-processing">
+                <span>处理中</span>
+                <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+            </span>
+        <ul class="qq-upload-list-selector qq-upload-list" aria-live="polite" aria-relevant="additions removals">
+            <li>
+                <div class="qq-progress-bar-container-selector">
+                    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                         class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                <span class="qq-upload-file-selector qq-upload-file"></span>
+                <span class="qq-upload-size-selector qq-upload-size"></span>
+                <button type="button" class="qq-btn qq-upload-cancel-selector qq-upload-cancel">取消</button>
+                <button type="button" class="qq-btn qq-upload-retry-selector qq-upload-retry">重试</button>
+                <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">删除</button>
+                <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
+            </li>
+        </ul>
+
+        <dialog class="qq-alert-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">关闭</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-confirm-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">否</button>
+                <button type="button" class="qq-ok-button-selector">是</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-prompt-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <input type="text">
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">取消</button>
+                <button type="button" class="qq-ok-button-selector">确定</button>
+            </div>
+        </dialog>
+    </div>
+</script>
+<script th:inline="javascript">
+    uploaderUrl = /*[[@{/upload/fine}]]*/ null;
+</script>
 <script>seajs.use(["main"]);</script>
+
 </body>
 </html>
