--- a/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
+++ b/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>供应商列表</title>
+    <title>线路采购商列表</title>
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
-    <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
-    <script src="../../assets/seajs/sea.js"></script>
-    <script src="../../assets/seajs/config.js"></script>
-    <script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>
+
+    <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <script src="../../../assets/seajs/sea.js"></script>
+    <script src="../../../assets/seajs/config.js"></script>
+
 </head>
 <body>
 <div class="panel-body" style="padding-bottom:0;">
@@ -17,10 +18,10 @@
         <div class="panel-body">
             <form id="formSearch" class="form-horizontal">
                 <div class="form-group" style="margin-top:15px">
-                    <label class="control-label col-sm-1" for="supplierName">供应商名称</label>
+                    <label class="control-label col-sm-1" for="buyerName">采购商名称</label>
                     <div class="col-sm-2">
-                        <input type="text" name="supplierName" id="supplierName" class="form-control"
-                               placeholder="供应商名称">
+                        <input type="text" name="buyerName" id="buyerName" class="form-control"
+                               placeholder="采购商名称">
                     </div>
                     <div class="col-sm-4">
                         <button class="btn btn-primary search">搜 索</button>
@@ -32,7 +33,7 @@
 
     <div id="toolbar" class="btn-group">
         <button id="btn_add" type="button" class="btn btn-default">
-            <a href="addSupplier.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
+            <a href="supplier.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
         </button>
         <button id="btn_edit" type="button" class="btn btn-default">
             <a><span class="glyphicon glyphicon-pencil" aria-hidden="true">修改</span></a>
@@ -42,7 +43,7 @@
         </button>
     </div>
 
-    <table id="table" data-toggle="table" data-url="../../mock/modelList.json" data-method="get"
+    <table id="table" data-toggle="table" data-url="../../../mock/modelList.json" data-method="get"
            data-side-pagination="server"
            data-pagination="true" data-striped="true"
            data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
@@ -63,5 +64,12 @@
         </thead>
     </table>
 </div>
+<script src="../../../assets/js/jquery.min.js"></script>
+<script src="../../../assets/libs/bootstrap/bootstrap.min.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
+<script src="../../../assets/js/page/platform/supplierList.js"></script>
+
+<!--<script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>-->
 </body>
 </html>
