采购商相关提交

--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -74,7 +74,8 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>采购商支付流水<span
+                            <a href="purchaserPaymentRecord/purchaserPaymentRecordList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>采购商支付流水<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
