--- a/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSettingList.html
+++ b/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSettingList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>采购商支付流水</title>
+    <title>采购商产品设置</title>
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
