--- a/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplierList.html
@@ -30,13 +30,9 @@
 
     <div id="toolbar" class="btn-group">
         <button id="btn_add" type="button" class="btn btn-default">
-            <a href="supplier.html"><span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span></a>
-        </button>
-        <button id="btn_edit" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-pencil" aria-hidden="true">修改</span></a>
-        </button>
-        <button id="btn_delete" type="button" class="btn btn-default">
-            <a><span class="glyphicon glyphicon-remove" aria-hidden="true">删除</span></a>
+            <a href="supplier.html" th:href="@{/distributionPlatform/toAddTouristSupplier}">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
+            </a>
         </button>
     </div>
 
