分销平台线路列表

--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -83,7 +83,8 @@
                         </li>
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路采购设置<span
+                            <a href="purchaserProductSetting/purchaserProductSettingList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>线路采购设置<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
@@ -96,7 +97,8 @@
                     <ul class="children">
                         <li class="childMenus" style="cursor: pointer;">
                             <div style="display: none; position: absolute; left: 10px; padding: 10px; top: 43px; color: #fff; z-index: 9999; background: #04B299; width: 180px; height: auto; border-radius: 4px 4px 4px 4px;"></div>
-                            <a href="supplier/supplierList.html" target="content"><i class="fa fa-caret-right"></i>线路产品审核<span
+                            <a href="trouristGood/touristGoodList.html" target="content"><i
+                                    class="fa fa-caret-right"></i>线路产品审核<span
                                     class="fa pull-right badge badge-success"
                                     style="display: none;background-color:red;">!
                                 </span>
